# course

./: .gitignore  README.md
4pcs/: CMakeLists.txt  Functor4pcs.h  FunctorSuper4pcs.h  PointPairFilter.h  bruteForceFunctor.h  congruentSetExplorationBase.h  congruentSetExplorationBase.hpp  data_interface.cc  data_interface.h  demo-utils.h  demo_io.cc  demo_io.h  doc.txt  fast_range_seg.cpp  fast_range_seg.h  gen_demo_data.cxx  geometry.h  intersectionFunctor.h  intersectionNode.h  kdtree.h  match4pcsBase.h  match4pcsBase.hpp  matchBase.h  matchBase.hpp  normalset.h  normalset.hpp  pairCreationFunctor.h  remove_small_island.cpp  remove_small_island.h  sampling.h  shared.h  super4pcs_test.cc  verify.h  vs.user.in
4pcs/doc/: class_uml.drawio  doc.md  pipeline.drawio  todo.md
digital_image_processing/: im_basic.m
lidar_slam/: CMakeLists.txt  doc.md  kalman_filter.cpp
lidar_slam/icp_ndt_adv/: CMakeLists.txt  Readme.md  icp.wxmx  main.cpp  transformation_estimate_adv.h  transformation_estimate_adv.hpp
lidar_slam/laser_segment/: CMakeLists.txt  laser_segment.cpp  laser_segment.h
lidar_slam/surfel/: CMakeLists.txt  surfel.cpp  surfel.h  surfel_demo.cpp
lidar_slam_course/HW1/: deduce.wxmx
lidar_slam_course/HW2/: hw2.md
lidar_slam_course/HW2/submit/: odom_calib.cpp
lidar_slam_course/HW2/submit/odom_ws_src/: Odom_Calib.cpp  main.cpp
lidar_slam_course/HW3/: hw3.md
lidar_slam_course/HW3/submit/: LidarMotionUndistortion.cpp  wegatron_第三章作业
lidar_slam_course/HW4/: lidarslam_pa4.md
lidar_slam_course/HW4/imlsMatcherProject/: show_res.rviz
lidar_slam_course/HW4/submit/imlsMatcher/: CMakeLists.txt  package.xml
lidar_slam_course/HW5/: pa5.md
lidar_slam_course/HW5/submit/: map_cspace.cpp
lidar_slam_course/HW6/: pa6.md
lidar_slam_course/HW6/submit/code/: CMakeLists.txt
lidar_slam_course/HW7/: pa7.md
ml/machine-learning-ex1/ex1/: computeCost.m  computeCostMulti.m  ex1.m  ex1_multi.m  featureNormalize.m  gradientDescent.m  gradientDescentMulti.m  normalEqn.m  plotData.m  token.mat  warmUpExercise.m
ml/machine-learning-ex2/ex2/: costFunction.m  costFunctionReg.m  ex2.m  plotData.m  predict.m  sigmoid.m  size(theta).ps  token.mat
ml/machine-learning-ex3/ex3/: ex3.m  lrCostFunction.m  oneVsAll.m  predict.m  predictOneVsAll.m
ml/machine-learning-ex4/ex4/: nnCostFunction.m  randInitializeWeights.m  sigmoidGradient.m  token.mat
ml/machine-learning-ex5/ex5/: ex5.m  learningCurve.m  linearRegCostFunction.m  polyFeatures.m  validationCurve.m
ml/machine-learning-ex6/ex6/: dataset3Params.m  gaussianKernel.m  linearKernel.m  processEmail.m
ml/machine-learning-ex7/ex7/: computeCentroids.m  findClosestCentroids.m  kMeansInitCentroids.m  pca.m  token.mat
ml/machine-learning-ex8/ex8/: cofiCostFunc.m  estimateGaussian.m  selectThreshold.m  token.mat
orbslam2_part/: CMakeLists.txt  ORBextractor.cc  ORBextractor.h  orb_extract_demo.cxx
point_cloud_course/HW1/lesson one/: off_to_ply.py  pca_normal.py  voxel_filter.py  wegatron_HW1.md
point_cloud_course/HW2/: wegatron_hw2.md
point_cloud_course/HW2/octree/: CMakeLists.txt  octree.cpp  octree.h
point_cloud_course/HW3/: KMeans.py  wegatron_hw3.md
point_cloud_course/HW4/: CMakeLists.txt  clustering.py  ground_seg.cpp  ground_seg.h  test_main.cpp  test_main.cxx  wegatron_hw4.md
point_cloud_course/myscript/: GMM.py  benchmark.py  clustering.py  insac_debug_plt.py  kdtree.py  kitti_data_set.py  octree.py  pca_normal.py  result_set.py  try.py
point_cloud_processing/: CMakeLists.txt  demo_analysis_mapping.cxx  demo_normal_gen.cxx  demo_outlier_remove.cxx  doc.md  vs.user.in
slam_book/full_bunndle_adj/: CMakeLists.txt  camera.h  full_bundle_adj_problem.cpp  full_bundle_adj_problem.h  main.cpp  readme.md
slam_book/pose_map_ba/: CMakeLists.txt  pose_map_problem.h
slam_book/ref/ref_full_bunddle/: CMakeLists.txt
slam_book/ref/ref_full_bunddle/common/tools/: random.h
vio_course/dso_course/HW1/: CMakeLists.txt  HW1.md  wegatron_dso_hw1.md
vio_course/dso_course/HW1/include/: geometry.hpp  photometric.hpp
vio_course/dso_course/HW1/src/: geometry.cpp  main.cpp  photometric.cpp
vio_course/dso_course/HW2/: CMakeLists.txt  HW2.md  wegatron_HW2.md
vio_course/dso_course/HW2/include/: base.hpp  track.hpp
vio_course/dso_course/HW2/src/: base.cpp  main.cpp  track.cpp
vio_course/dso_course/HW3/: HW3.md  wegatron_hw3.md
vio_course/orbslam2_course/: note  orbslam2_course.md
vio_course/orbslam2_course/hw1/: CMakeLists.txt  wegatron_hw1.md
vio_course/orbslam2_course/hw1/demo/: main.cpp
vio_course/orbslam2_course/hw1/src/: two_view_geometry.cpp  two_view_geometry.h
vio_course/orbslam2_course/hw3/demo/: main.cpp
vio_course/orbslam2_course/hw3/src/: pnp_wrapper.cpp  pnp_wrapper.h  two_view_geometry.cpp  two_view_geometry.h
vio_course/orbslam2_course/hw3/tmp/: SOLVEPNP_EPNP.txt  SOLVEPNP_P3P.txt  frame_traj_est.txt  frame_traj_gt.txt  res.csv
vio_course/orbslam2_course/hw4/: CMakeLists.txt  wegatron_hw4.md
vio_course/orbslam2_course/hw4/demo/: main.cpp
vio_course/orbslam2_course/hw4/src/: convertor.h  define.h  optimizer.cpp  two_view_geometry.cpp  utils.cpp
vio_course/vins/: wegatron_vins_hw1.md
vio_course/vins/hello_world/: CMakeLists.txt  helloworld.launch  package.xml
vio_course/vins/hello_world/src/: hello_get.cpp  hello_send.cpp
vio_course/vins/hw2/: hessian_view.m  wegatron_vins_hw2.md
vio_course/vins/hw3/: vins_hw4.md
vslam_course/PA2/: pa2.md
vslam_course/PA2/code/: CMakeLists.txt  use_decomposition.cpp  use_quaternion.cpp
vslam_course/PA3/VSLAM_3/L3/: tmp.md  vslam_course_pa3.md
vslam_course/PA3/submit/: CMakeLists.txt  draw_trajectory.cpp
vslam_course/PA4/L4/: pa4.md
vslam_course/PA4/L4/code/: CMakeLists.txt  gaussnewton.cpp  undistort_image.cpp
vslam_course/PA5/L5/: pa5.md
vslam_course/PA5/L5/code/: CMakeLists.txt  GN-BA.cpp
vslam_course/PA6/L6/: pa6.md
vslam_course/PA6/L6/submit/code/: CMakeLists.txt  disparity.cpp  optical_flow.cpp
vslam_course/PA7/L7/: pa7.md
vslam_course/PA7/L7/code/: CMakeLists.txt  bundle_adj.cpp  directBA.cpp  ori.txt
(+29 files in other folders)
